--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.spbstu.scc</groupId>
+    <groupId>ru.spbstu.sce</groupId>
     <artifactId>cex</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <modules>
-        <module>cex</module>
-    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
