On SCRUM16 added the docker file with data based and change state on blocked

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port=8090
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cex_data
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
