--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8081
+server.app.secret="o00tjbMWPF8yhgF78nyEhZa8jFdMAapQaUIoB6V20N4="
+server.app.lifetime=60000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cex_data
 spring.datasource.username=user
@@ -6,3 +8,6 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+logging.level.root=info
+
