Rewrite token generation using non-deprecated methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-server.app.secret="o00tjbMWPF8yhgF78nyEhZa8jFdMAapQaUIoB6V20N4="
+server.app.secret=o00tjbMWPF8yhgF78nyEhZa8jFdMAapQaUIoB6V20N4=
 server.app.lifetime=60000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cex_data
