--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "lightweight-charts": "^4.1.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
