--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>6.3.1</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
